src/test/deca/codegen/valid/created/WhileTrue.deca
// Description:
// while true
// Resultats:
// -2147483648

{
    int a = 2;
    while(a>0){
        a = a+a;
    }
    println(a);
}