src/test/deca/codegen/invalid/created/ArithmeticExp2.deca
// Resultats :
//    Erreur generation code
//    Ligne 6 : Division by 0

{
    int a = 3 % 0;
}